Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Jul-2010 Jean-Marie Simonet
 # [#20760] *Contact Manager Options > Contact List parameters
 # [#21377] error caused by page break without readmore (see on visiting component menu item in sample data)
 
13-Jul-2010 Mark Dexter
# [#21083] Category List menu link to unpublished category gives error

-------------------- 1.6.0 Beta5 Release [12-Jul-2010] ------------------

12-Jul-2010 Ian MacLennan
 # [#20507] SEF w/o .htaccess causes loss of css formatting and/or 404 errors
 # [#21031] A number of not well formed errors in the backend

12-Jul-2010 Mark Dexter
 # [#21196] Save order disk not disabled when not in ordering sort
 # [#20963] Articles » List All Categories and Rss not working
 # [#21332] com_contact tabs aren't working in IE7 Patch
 # [#20957] Batch processing of users is using old tables
 # [#21317] Deleting a category does not delete it's asset
 # [#21214] Editing an article in front-end displays default site template
 # [#21356] Sorting and filtering in "Contacts" and "Newsfeeds" modals
 # [#21289] Missing Cache Manager Error Message
 # [#21359] Search Button Image in mod_search is not showing properly

12-Jul-2010 Jean-Marie Simonet
 # Getting rid of useless Options in mod latest and mod popular in back-end
 $ Typo in en-GB.ini + sorting strings
 # Getting rid of useless No Category option
 # [#21376] Beez2.0 and Beez5 (Angie Radtke)
 # Missing CSS in front-end Beez (Thanks Angie)
 # [#21363] Stats module layout in Beez  Thanks Bill.
 # [#21373] Restore 1.5 ability for multiple categories for Most Read Content. Thanks Amy.
 # [#21372] Restore 1.5 ability for multiple categories for Module Article Newsflash. Thanks Amy.
 $ Consolidated some strings
 
11-Jul-2010 Chris Davenport
 # Follow up to [#21311] - add missing key references for 3 menu items
 