@@ -30,6 +30,7 @@ JH3="h3"
 JH4="h4"
 JH5="h5"
 
+ERROR="Error"
 JADMINISTRATION="Administration"
 JADMINISTRATOR="Administrator"
 JALL="All"
@@ -1157,9 +1158,8 @@ JWARNING_DELETE_MUST_SELECT="You must select at least one item to permanently de
 JWARNING_REMOVE_ROOT_USER="You are logged in using the emergency Root User setting in configuration.php.<br />You should remove $root_user from configuration.php as soon as you have restored control to your site to avoid future security breaches.<br /><a href='index.php?option=com_config&task=application.removeroot'>Click here to try to do it automatically.</a>"
 
 MESSAGE="Message"
-;
-; Old string format
-;
+NOTICE="Notice"
+ERROR="Error"
 
 ; Date format
 
