@@ -72,6 +72,7 @@ JBROWSERTARGET_PARENT="Open in parent window"
 JBROWSERTARGET_POPUP="Open in popup"
 
 JERROR_ALERTNOAUTHOR="You are not authorised to view this resource."
+JERROR_ALERTNOTEMPLATE="<strong>The template for this display is not available. Please contact a Site administrator.</strong>"
 JERROR_AN_ERROR_HAS_OCCURRED="An error has occurred."
 JERROR_LAYOUT_AN_OUT_OF_DATE_BOOKMARK_FAVOURITE="an <strong>out-of-date bookmark/favourite</strong>"
 JERROR_LAYOUT_ERROR_HAS_OCCURRED_WHILE_PROCESSING_YOUR_REQUEST="An error has occurred while processing your request."
@@ -356,6 +357,8 @@ PHPMAILER_ENCODING="Unknown encoding:"
 PHPMAILER_SIGNING_ERROR="Signing error:"
 
 MESSAGE="Message"
+NOTICE="Notice"
+ERROR="Error"
 JSEARCH_FILTER_LABEL="Filter"
 JSEARCH_FILTER_CLEAR="Clear"
 JSEARCH_FILTER_SUBMIT="Search"
