@@ -30,6 +30,7 @@ $ -> Language fix or change
 13-Jul-2010 Jean-Marie Simonet
  # [#20760] *Contact Manager Options > Contact List parameters
  # [#21377] error caused by page break without readmore (see on visiting component menu item in sample data)
+ # [#21382] Fallback template is rhuk_milkyway, not beez_20, and doesn't load properly.
  
 13-Jul-2010 Mark Dexter
 # [#21083] Category List menu link to unpublished category gives error
